checkout description and title, working number filter in facets

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -508,6 +508,8 @@ template(name='price_view')
             else
                 |#{this}
         strong &nbsp; #{field_value}
+        .ui.big.green.button.buy_now
+            |buy now
 
 
 template(name='date_edit')
