--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -184,7 +184,7 @@ template(name='checkin_card')
                         //- +i name='treadmill' classes='ui inline image'
                         .ui.inline.white.inverted.header 
                             //- +i name='treadmill'
-                            | health club check in
+                            | complete check in
                             i.right.chevron.icon
                             //- i.right.chevron.icon
                             //- .ui.big.button.complete_checkin
