working test stripe payments, init fuckery

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -209,7 +209,7 @@ template(name='image_edit')
                 //-     input.cloudinary_id(type='text' value=field_value placeholder='cloudinary_id' autocomplete="off")
                 // else
                 //     label Upload Image
-                input(type='file' name='upload_image' accept='image/*,application/pdf')
+                input(type='file' name='upload_image' accept='image/*' capture='user')
 
 
 template(name='image_link_edit')
