--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -68,9 +68,9 @@ template(name='add_resident')
                     | resident
                 .ui.big.form
                     .field
-                        input#first_name(type='text' placeholder='First Name' autocomplete='off')
+                        input#first_name(type='text' placeholder='first name' autocomplete='off')
                     .field
-                        input#last_name(type='text' placeholder='Last Name' autocomplete='off')
+                        input#last_name(type='text' placeholder='last name' autocomplete='off')
                     //- .field
                     //-     |Username
                     //-     input#username(type='text')
