--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -48,9 +48,9 @@ template(name='delta')
                     each sorted_facets
                         +facet
                 .twelve.wide.column.scrolling
-                    .ui.inline.header
-                        |sort by
-                    .ui.button
+                    //- .ui.inline.header
+                    //-     |sort by
+                    //- .ui.button
                     each current_delta.result_ids
                         +delta_result
                 
