--- a/client/nav.jade
+++ b/client/nav.jade
@@ -7,11 +7,10 @@ template(name='nav')
                 .icon.item
                     i.big.loading.dharmachakra.icon
             else
-                if is_resident_or_user
+                if is_admin
                     a.header.icon.item(href='/' class="{{isActivePath '/'}}")
                         //- i.home.large.large.icon
                         +i name='home-page'  
-                if currentUser  
                     a.header.icon.set_model.item(href='/home' class="{{isActivePath '/home'}}")
                         //- i.th.large.large.icon
                         +i name='activity-grid-2'    
@@ -29,7 +28,7 @@ template(name='nav')
                     //-     //- i.food.large.icon
                     //-     +i name='food'
                     //-     .mobile.hidden &nbsp; meals
-                a.item.set_shop(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}" title='shop')
+                a.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}" title='shop')
                         //- i.food.large.icon
                         +i name='shop'
                         .mobile.hidden &nbsp; shop
@@ -54,13 +53,13 @@ template(name='nav')
                         //- i.clinic.medical.large.icon
                         .mobile.hidden &nbsp; health club
             .right.menu
-                if is_admin
-                    a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
-                        +i name='tasks'
-                        //- i.tasks.large.icon
-                    a.icon.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
-                        +i name='note'
-                        //- i.rss.large.icon
+                //- if is_admin
+                //-     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
+                //-         +i name='tasks'
+                //-         //- i.tasks.large.icon
+                //-     a.icon.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
+                //-         +i name='note'
+                //-         //- i.rss.large.icon
                 if currentUser
                     //- .item
                     //-     .ui.header(title='your karma') #{currentUser.karma}
@@ -78,6 +77,7 @@ template(name='nav')
                                 +i name='chat'
                             a.icon.item(href="/cart" class="{{isActivePath '/cart'}}")
                                 +i name='shopping-cart'
+                                |#{cart_amount}
                                 //- i.chat.large.icon
                             //- if is_user
                             //-     a.icon.item(href="/events" class="{{isActivePath '/events'}}")
