--- a/components/accounts/reset_password.jade
+++ b/components/accounts/reset_password.jade
@@ -4,40 +4,40 @@ template(name='forgot_password')
             .fifteen.wide.column
                 //- h1.ui.center.aligned.header Reset Password
                 h1.ui.center.aligned.grey.header
-                    i.refresh.icon
-                    |Forgot Password 
+                    +i name='forgot-password' classes='ui mini inline image'                    
+                    |forgot password 
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.center.aligned.basic.segment
-                    .ui.left.icon.labeled.large.input(class=login_class)
-                        .ui.smoothed.basic.label
-                            i.user.icon
-                            | Username
+                    .ui.inline.header
+                        +i name='user'
+                        | username
+                    .ui.left.icon.large.input(class=login_class)
                         input.username(type='text')
-                    .ui.circular.blue.submit.button.submit_username Submit
-                    div
+                    .ui.circular.blue.submit.button.submit_username submit
+                    .ui.dividing.header or
+                    .ui.inline.header
+                        +i name='email'
+                        | email
                     .ui.left.icon.labeled.large.input
-                        .ui.basic.smoothed.label
-                            i.envelope.icon
-                            | Email
                         input.email(type='email')
-                    .ui.circular.blue.submit.button.submit_email Submit
+                    .ui.circular.blue.submit.button.submit_email submit
                 if username
                     if logging_in
                         .ui.fluid.large.hhblue.circular.button.enter(title="Login #{username}" class=enter_class)
-                            |Login '#{username}'
+                            |login '#{username}'
                             i.right.arrow.icon
                     else
                         .ui.center.aligned.secondary.segment
-                            .ui.small.grey.header Username "#{username}" not found
-                            a(href='/register') Register
+                            .ui.small.grey.header username "#{username}" not found
+                            a(href='/register') register
                 .ui.center.aligned.basic.segment    
                     a.ui.circular.big.basic.button(href='/login') 
-                        i.sign.in.icon
-                        |Login
+                        +i name='enter-2' classes='ui mini inline image'
+                        |login
                     a.ui.circular.big.basic.button(href='/register')
-                         i.user.plus.icon
-                         |Register
+                        +i name='add-user-male' classes='ui mini inline image'
+                        |register
 
 
 template(name='reset_password')
