--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -2,26 +2,27 @@ template(name='login')
     .ui.padded.stackable.grid
         .centered.row
             .ten.wide.column
-                h1.ui.center.aligned.header enter gro
+                h1.ui.center.aligned.header enter gold run online
                     //- i.massive.icons
                     //-     i.home.icon
                     //-     i.corner.right.chevron.icon
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.large.input(class=login_class)
-                    .ui.inline.small.header 
-                        i.user.icon
+                    .ui.inline.small.grey.header 
+                        +i name='user'
                         |username
                     input.username(type='text')
                 .ui.fluid.big.input(class=login_class)
-                    .ui.inline.small.header 
-                        i.lock.icon
+                    .ui.inline.small.grey.header 
+                        +i name='lock'
                         | password
                     input.password(type='password')
                 //- if username
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="Login #{username}" class=enter_class)
-                        i.sign.in.alternate.icon
+                        //- i.sign.in.alternate.icon
+                        +i name='enter-2' classes='ui mini inline image'
                         |login
                         | #{username}
                         //- i.right.chevron.icon
@@ -30,12 +31,15 @@ template(name='login')
                         .ui.center.aligned.segment
                             .ui.small.header no '#{username}' user
                             a.ui.basic.button(href='/register')
-                                i.user.plus.icon
+                                //- i.user.plus.icon
+                                +i name='enter-2' classes='ui mini inline image'                    
                                 | register
                 .ui.center.aligned.basic.segment    
                     a.ui.large.basic.button(href='/forgot_password')
-                        i.refresh.icon
+                        +i name='forgot-password' classes='ui mini inline image'                    
+                        //- i.refresh.icon
                         |forgot password
                     a.ui.large.basic.button(href='/register') 
-                        i.user.plus.icon
+                        +i name='add-user-male' classes='ui mini inline image'                    
+                        //- i.user.plus.icon
                         |register
